[gd_scene load_steps=25 format=2]

[ext_resource path="res://Source/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Source/Fonts/azonix-font/Azonix-1VB0.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Source/Images/globe_normalMapjpg.jpg" type="Texture" id=4]
[ext_resource path="res://Source/Images/8081_earthmap4k.jpg" type="Texture" id=5]
[ext_resource path="res://Source/Images/earthcloudmap.jpg" type="Texture" id=6]
[ext_resource path="res://Source/Images/test-space.png" type="Texture" id=7]
[ext_resource path="res://Source/Sounds-Audio/546969__newlocknew__ui-6-4-confusion-blip-tmstrtch-multiprocessing.wav" type="AudioStream" id=9]
[ext_resource path="res://Source/Scenes/ModeSelection.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 1, 0.482353, 0.482353, 1 )
extra_spacing_top = 10
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="SphereMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 5 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 0.3
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 6 )
normal_enabled = true
normal_scale = 1.3
normal_texture = ExtResource( 4 )
detail_enabled = true
detail_mask = ExtResource( 6 )
detail_blend_mode = 0
detail_uv_layer = 0
detail_albedo = ExtResource( 5 )
detail_normal = ExtResource( 4 )

[sub_resource type="PanoramaSky" id=13]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=14]
background_mode = 2
background_sky = SubResource( 13 )
fog_depth_begin = 0.0
dof_blur_far_enabled = true
dof_blur_far_distance = 0.01
dof_blur_far_transition = 0.01
dof_blur_far_amount = 0.0
dof_blur_far_quality = 2

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "globe_rotate"
length = 15.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 15 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.00179e-05, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 15 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 15 )
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera:environment:dof_blur_far_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "camera_blur"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera:environment:dof_blur_far_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=18]
resource_name = "fade_in"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainLogoText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -487.0
margin_top = 32.0
margin_right = -141.0
margin_bottom = 158.0
custom_fonts/normal_font = SubResource( 1 )
text = "CORRUPT 
WEB
"

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -484.5
margin_top = -82.0
margin_right = -147.5
margin_bottom = -16.0
rect_pivot_offset = Vector2( 128.5, 96 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -484.0
margin_top = 7.0
margin_right = -147.0
margin_bottom = 73.0
rect_min_size = Vector2( 337, 66 )
rect_pivot_offset = Vector2( 128.5, 96 )
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[node name="DebugButton" type="Button" parent="."]
margin_left = 29.0
margin_top = 556.0
margin_right = 184.0
margin_bottom = 594.0
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugSettings" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -181.0
margin_right = 162.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DebugSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="CloseButton" type="Button" parent="DebugSettings"]
margin_left = 276.0
margin_right = 323.0
margin_bottom = 29.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFrameRate" type="Control" parent="DebugSettings"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugSettings/ShowFrameRate"]
margin_left = 18.0
margin_top = 81.0
margin_right = 189.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "Show frame rate"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleShowFrameRate" type="CheckButton" parent="DebugSettings/ShowFrameRate"]
margin_left = 239.0
margin_top = 75.0
margin_right = 315.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="DebugSettings"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="DebugSettings/Control"]
margin_left = 16.0
margin_top = 128.0
margin_right = 208.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
text = "Open Project Data Folder"
align = 1
valign = 1

[node name="OpenProjectDataFolder" type="Button" parent="DebugSettings/Control"]
margin_left = 253.0
margin_top = 132.0
margin_right = 300.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 5 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -181.0
margin_right = 162.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="CloseButton" type="Button" parent="Settings"]
margin_left = 276.0
margin_right = 323.0
margin_bottom = 29.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnableSound" type="Control" parent="Settings"]
margin_left = -51.0
margin_top = -5.0
margin_right = -51.0
margin_bottom = -5.0

[node name="Label" type="Label" parent="Settings/EnableSound"]
margin_left = 18.0
margin_top = 81.0
margin_right = 189.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "Sound"
align = 1
valign = 1

[node name="ToggleSound" type="CheckButton" parent="Settings/EnableSound"]
margin_left = 239.0
margin_top = 75.0
margin_right = 315.0
margin_bottom = 115.0
pressed = true

[node name="VsyncSelection" type="Control" parent="Settings"]
margin_left = -52.0
margin_top = 39.0
margin_right = -52.0
margin_bottom = 39.0

[node name="Label2" type="Label" parent="Settings/VsyncSelection"]
margin_left = 22.0
margin_top = 71.0
margin_right = 189.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Vsync"
align = 1
valign = 1

[node name="ToggleVsync" type="CheckButton" parent="Settings/VsyncSelection"]
margin_left = 239.0
margin_top = 64.0
margin_right = 315.0
margin_bottom = 104.0
pressed = true

[node name="SettingInfoLabel" type="Label" parent="Settings"]
anchor_top = -0.0648379
anchor_right = 0.873065
margin_left = 9.0
margin_top = 360.0
margin_right = 32.0
margin_bottom = 394.0
align = 1
valign = 1
autowrap = true

[node name="SettingVsyncInfo" type="Control" parent="Settings"]
margin_left = 28.0
margin_top = 116.0
margin_right = 80.0
margin_bottom = 136.0

[node name="SettingSoundInfo" type="Control" parent="Settings"]
margin_left = 25.0
margin_top = 82.0
margin_right = 82.0
margin_bottom = 102.0

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Spatial"]
transform = Transform( 1.3, 0, 2.27299e-07, 0, 1.3, 0, -2.27299e-07, 0, 1.3, 0.00458074, -0.00583899, 0.00363779 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( -0.276023, 0, -0.961151, 0, 1, 0, 0.961151, 0, -0.276023, -3.75936, 0, -3.65965 )
environment = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spatial"]
autoplay = "globe_rotate"
playback_speed = 0.3
anims/RESET = SubResource( 11 )
anims/globe_rotate = SubResource( 12 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Spatial"]
autoplay = "camera_blur"
anims/RESET = SubResource( 15 )
anims/camera_blur = SubResource( 16 )

[node name="DirectionalLight" type="DirectionalLight" parent="Spatial"]
transform = Transform( -0.267373, 0, 0.963593, 0, 1, 0, -0.963593, 0, -0.267373, 6.41707, 0, -0.02784 )
light_indirect_energy = 16.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 11.0
margin_right = 25.0
margin_bottom = 11.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/RESET = SubResource( 17 )
anims/fade_in = SubResource( 18 )

[node name="MouseHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 1.0

[node name="Control" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="DebugButton" to="." method="_on_DebugButton_pressed"]
[connection signal="pressed" from="DebugSettings/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="DebugSettings/ShowFrameRate/ToggleShowFrameRate" to="." method="_on_ToggleShowFrameRate_pressed"]
[connection signal="pressed" from="DebugSettings/Control/OpenProjectDataFolder" to="." method="_on_OpenProjectDataFolder_pressed"]
[connection signal="pressed" from="Settings/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Settings/EnableSound/ToggleSound" to="." method="_on_ToggleSound_pressed"]
[connection signal="pressed" from="Settings/VsyncSelection/ToggleVsync" to="." method="_on_ToggleVsync_pressed"]
[connection signal="mouse_entered" from="Settings/SettingVsyncInfo" to="." method="_on_SettingVsyncInfo_mouse_entered"]
[connection signal="mouse_exited" from="Settings/SettingVsyncInfo" to="." method="_on_SettingVsyncInfo_mouse_exited"]
[connection signal="mouse_entered" from="Settings/SettingSoundInfo" to="." method="_on_SettingSoundInfo_mouse_entered"]
[connection signal="mouse_exited" from="Settings/SettingSoundInfo" to="." method="_on_SettingSoundInfo_mouse_exited"]
[connection signal="finished" from="MouseHoverSound" to="." method="_on_MouseHoverSound_finished"]
